src/snapshots/bminor__parser__test__expression_statement-2.snap
---
source: src/parser.rs
expression: "parse_statement(\"false;\")"
---
Ok(
    Expression {
        expression: Literal {
            value: Token {
                kind: False,
                lexeme: "false",
                line: 0,
            },
            kind: Boolean,
        },
    },
)
