src/snapshots/bminor__parser__test__expression_statement-3.snap
---
source: src/parser.rs
expression: "parse_statement(\"1;\")"
---
Ok(
    Expression {
        expression: Literal {
            value: Token {
                kind: IntegerLiteral,
                lexeme: "1",
                line: 0,
            },
            kind: Integer,
        },
    },
)
