src/snapshots/bminor__parser__test__expression_statement-4.snap
---
source: src/parser.rs
expression: "parse_statement(\"'c';\")"
---
Ok(
    Expression {
        expression: Literal {
            value: Token {
                kind: CharLiteral,
                lexeme: "'c'",
                line: 0,
            },
        },
    },
)
