src/snapshots/bminor__parser__test__expression_statement-5.snap
---
source: src/parser.rs
expression: "parse_statement(\"\\\"string\\\";\")"
---
Ok(
    Expression {
        expression: Literal {
            value: Token {
                kind: StringLiteral,
                lexeme: "\"string\"",
                line: 0,
            },
            kind: String,
        },
    },
)
