src/snapshots/bminor__parser__test__expression_statement-6.snap
---
source: src/parser.rs
expression: "parse_statement(\"1 + 1;\")"
---
Ok(
    Expression {
        expression: Binary {
            left: Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
            },
            operator: Token {
                kind: Plus,
                lexeme: "+",
                line: 0,
            },
            right: Literal {
                value: Token {
                    kind: IntegerLiteral,
                    lexeme: "1",
                    line: 0,
                },
            },
        },
    },
)
