src/snapshots/bminor__parser__test__expression_statement-8.snap
---
source: src/parser.rs
expression: "parse_statement(\"fn();\")"
---
Ok(
    Expression {
        expression: Call {
            name: Token {
                kind: Identifier,
                lexeme: "fn",
                line: 0,
            },
            args: [],
        },
    },
)
