src/snapshots/bminor__parser__test__expression_statement.snap
---
source: src/parser.rs
expression: "parse_statement(\"true;\")"
---
Ok(
    Expression {
        expression: Boolean {
            expression: Literal {
                value: Token {
                    kind: True,
                    lexeme: "true",
                    line: 0,
                },
            },
        },
    },
)
