src/snapshots/bminor__parser__test__for_statement-4.snap
---
source: src/parser.rs
expression: "parse_statement(\"for (;;\")"
---
Err(
    UnexpectedToken(
        "expect ')' after increment",
    ),
)
